[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["ZSRoach <zachary@okmaybe.com>"]
description = ""
name = "maze-game-text-adventure"
version = "0.1.0"
[tool.poetry.dependencies]
python = "^3.7"
termcolor = "^1.1"
entities = "^1.0"
[tool.poetry.dev-dependencies]
